Fix: overflow 활성화 시, Y축 스크롤만 나타나도록 코드 수정

--- a/front/public/css/style.css
+++ b/front/public/css/style.css
@@ -120,3 +120,7 @@
 .ant-tabs-tab:hover {
     color: #7262fd;
 }
+
+body {
+    overflow-x: hidden;
+}
